# BOTWpelago

./: .gitignore  BOTWpelago.spec  LICENSE  README.md  botw_hp_research.md  conftest.py  extract_flag_names.py  extract_msg_names.py  find_flags.py  flag_db.py  hash_oracle.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_botwpelago.py  scaffold_locations.py  scaffold_shrines.py
.claude/: CLAUDE.md
BotWClient/: BotWClient.py  item_map.py  memory_injector.py  native_mod.py  rando_reader.py  save_parser.py
botwpelago/: __init__.py  __main__.py  app.py  config.py  overlay.py  pack_builder.py  runner.py
data/: README.md  botw_items.json  dungeon_names.json  gate_items.json  hash_id_map.json  item_sort_keys.json  location_marker.json  locations.json  pouch_items.json  rando_chest_map.json  shrines.json
docs/: AGENT_BRIEF.md  Notes test v0.1.txt  build.md  ingame_test_checklist.md  memory_map.md  native_mod_design.md  setup.md  status.md
players/: botw_test.yaml
rando/: BotwRandoLib.Properties.Resources.resx  BotwRandoLib.csproj  Program.cs  README.md
research/: 2026-06-28_cemu-live-item-injection.md  botw-pausemenudatamgr-pouchitem.md
tests/: test_data.py  test_save_parser.py
tools/: build_apworld.py  build_flag_map.py  build_item_db.py  build_locations.py  build_loot_table.py  build_poptracker.py  build_sort_keys.py  calib_anchor.py  calib_distance.py  capture_pouch_templates.py  diag_pouch.py  diff_scan.py  diff_slots.py  disasm_func.py  extract_map_coords.py  find_codecave.py  find_live_bool_array.py  flag_diff.py  inspect_save_porch.py  (+16 more)
(+53 files in other folders)
